Remove usages of deprecated Java functions